--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,11 @@
   <body>
     <div class="wrapper">
       <header>
-      <h1><a href="http://{{site.username}}.github.io/Vitamin/">{{site.title}}</a></h1>
+      <h1><a href="http://{{site.username}}.github.io/VitaminAli/">{{site.title}}</a></h1>
         <p>人生到处知何似 应似飞鸿踏雪泥</p>
-        <p class="view"><a href="https://github.com/{{site.username}}/Vitamin">View the Project on GitHub <small>{{site.username}}/Vitamin</small></a></p>
+        <p class="view"><a href="https://github.com/{{site.username}}/VitaminAli">View the Project on GitHub <small>{{site.username}}/VitaminAli</small></a></p>
         <ul>
-          <li><a href="https://github.com/{{site.username}}/Vitamin/tree/gh-pages">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/{{site.username}}/VitaminAli/tree/gh-pages">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
