--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-      <h1><a href="http://{{site.username}}.github.io/VitaminAli/">{{site.title}}</a></h1>
+      <h1><a href="http://www.vitaminali.com">{{site.title}}</a></h1>
         <p>人生到处知何似 应似飞鸿踏雪泥</p>
         <p class="view"><a href="https://github.com/{{site.username}}/VitaminAli">View the Project on GitHub <small>{{site.username}}/VitaminAli</small></a></p>
         <ul>
@@ -33,7 +33,7 @@
     </div>
     <footer>
       <p>Project maintained by <a href="https://github.com/{{site.username}}">{{site.username}}</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="http://www.vitaminali.com">Vitamin°</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
