--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
     </div>
     <footer>
       <p>Project maintained by <a href="https://github.com/{{site.username}}">{{site.username}}</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="http://www.vitaminali.com">Vitamin°</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/ZhangNian1995">Vitamin°</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
