--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -16,9 +16,9 @@ body {
   color: #555;
   font-weight: 300;
   background: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
-  filter:"progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod='scale')";  
--moz-background-size:100% 100%;  
-    background-size:100% 100%; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .wrapper {
