--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,9 @@
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/ZhangNian1995">Vitamin°</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+    <script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Ff84b27adefd94b52a447c69c6dd097ee' type='text/javascript'%3E%3C/script%3E"));
+</script>
   </body>
 </html>
