--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,15 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?913d3368daf90b2c79f8569a9ffa5e00";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
   </head>
   <body>
     <div class="wrapper">
@@ -36,9 +45,5 @@
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/ZhangNian1995">Vitamin°</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    <script type="text/javascript">
-var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Ff84b27adefd94b52a447c69c6dd097ee' type='text/javascript'%3E%3C/script%3E"));
-</script>
   </body>
 </html>
