--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,7 @@
       </section>
     </div>
     <footer>
-      <p>Project maintained by <a href="https://github.com/{{site.username}}">{{site.username}}</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/ZhangNian1995">Vitamin°</a></p>
+      <p>Project maintained by <a href="https://github.com/{{site.username}}">Vitamin°</a></p>
       <p><script type="text/javascript">
       var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
       document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F913d3368daf90b2c79f8569a9ffa5e00' type='text/javascript'%3E%3C/script%3E"));
