--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
       <h1><a href="http://www.vitaminali.com">{{site.title}}</a></h1>
-        <p>爱情原如树叶一样，在人忽视里绿了，在忍耐里露出蓓蕾。</p>
+        <p>Choose what I love, and love her!</p>
         <p class="view"><a href="https://github.com/{{site.username}}/VitaminAli">View the Project on GitHub <small>{{site.username}}/VitaminAli</small></a></p>
         <ul>
           <li><a href="https://github.com/{{site.username}}/VitaminAli/tree/gh-pages">View On <strong>GitHub</strong></a></li>
