--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <bgsound src="http://yinyueshiting.baidu.com/data2/music/27855051/27855052187200128.mp3?xcode=38b78d0c51295a579e3af6bc579c5e94eb25fe82229e7067" loop="-1">
+    <bgsound src="http://sc1.111ttt.com/2014/1/12/12/5121609126.mp3" loop="-1">
   </head>
   <body>
     <div class="wrapper">
