--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,6 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-    <embed src="https://github.com/ZhangNian1995/VitaminAli/blob/gh-pages/music/%E4%BA%95%E4%B8%8A%E9%89%B4%20-%20%E7%A7%81%E3%81%AE%E4%B8%96%E7%95%8C.mp3" autostart="true" loop="true" hidden="true">
   <body>
     <div class="wrapper">
       <header>
@@ -39,5 +38,6 @@
     </script></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    <embed src="https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/music/%E4%BA%95%E4%B8%8A%E9%89%B4%20-%20%E7%A7%81%E3%81%AE%E4%B8%96%E7%95%8C.mp3" autostart="true" loop="true" hidden="true">
   </body>
 </html>
