--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -22,9 +22,13 @@ body {
 }
 
 .wrapper {
-  width: 800px;
+  width: 1000px;
   margin: 0 auto;
   background: #DEDEDE;
+  filter:alpha(opacity=50);   
+      -moz-opacity:0.5;   
+      -khtml-opacity: 0.5;   
+      opacity: 0.5;   
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   -ms-border-radius: 8px;
