--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,7 +6,7 @@ body {
   color: #555;
   font-weight: 300;
   background: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
-  background-size:contain;
+  background-size:100% 100%;
 }
 
 .wrapper {
