--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -7,7 +7,7 @@ body {
   font-weight: 300;
   background: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
   background-repeat:repeat-y;
-  background-size:contain;
+  background-size:cover;
 }
 
 .wrapper {
