--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -9,6 +9,14 @@ background: #6c7989 -ms-linear-gradient(#6c7989, #434b55) fixed;
 background: #6c7989 linear-gradient(#6c7989, #434b55) fixed;
 }
 
+body {
+padding: 50px 0;
+margin: 0;
+font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+color: #555;
+font-weight: 300;
+}
+
 .wrapper {
   width: 1000px;
   margin: 0 auto;
