--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,11 +1,12 @@
 /* @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700); */
 body {
-background: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
 padding: 50px 0;
 margin: 0;
 font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 color: #555;
 font-weight: 300;
+background: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
+background-repeat : repeat-y;
 }
 
 .wrapper {
