--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,8 +5,7 @@ margin: 0;
 font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 color: #555;
 font-weight: 300;
-background: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
-background-repeat : repeat-y;
+background-image: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
 }
 
 .wrapper {
