--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,6 +6,9 @@ font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 color: #555;
 font-weight: 300;
 background-image: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
+background-repeat:no-repeat;
+background-attachment:fixed;
+background-position:center;
 }
 
 .wrapper {
