--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -12,6 +12,7 @@ background-position:cover;
 background-image: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
 background-repeat:repeat-y;
 background-attachment:scroll;
+background-position:center;
 background-position:contain;
 }
 
