--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -7,6 +7,7 @@ color: #555;
 font-weight: 300;
 background-image: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
 background-repeat:repeat-y;
+background-repeat:repeat-x;
 background-attachment:scroll;
 background-position:cover;
 background-image: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
