--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,11 +6,7 @@ font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 color: #555;
 font-weight: 300;
 background-image: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
-background-repeat:repeat-y;
-background-repeat:repeat-x;
-background-attachment:scroll;
-background-position:cover;
-background-image: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
+background-color:rgb(38,38,38);
 background-repeat:repeat-y;
 background-attachment:scroll;
 background-position:center;
