--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,9 +6,9 @@ font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 color: #555;
 font-weight: 300;
 background-image: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
-background-color:rgb(38,38,38);
+background-color:rgb(35,35,35);
 background-repeat:repeat-y;
-background-attachment:scroll;
+background-attachment:fixed;
 background-position:center;
 }
 
