--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -7,7 +7,7 @@ color: #555;
 font-weight: 300;
 background-image: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
 background-color:rgb(35,35,35);
-background-repeat:repeat-y;
+background-repeat:no-repeat;
 background-attachment:fixed;
 background-position:center;
 }
