--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -9,7 +9,7 @@ background-image: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAl
 background-color:rgb(35,35,35);
 background-repeat:no-repeat;
 background-attachment:fixed;
-background-position:center;
+background-position:center center;
 }
 
 .wrapper {
