--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -7,7 +7,7 @@ color: #555;
 font-weight: 300;
 background-color:rgb(35,35,35);
 background: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png') scroll repeat-y;
-position:top center;
+background-position: top center;
 }
 
 .wrapper {
