--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,8 +6,9 @@ font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 color: #555;
 font-weight: 300;
 background-color:rgb(35,35,35);
-background: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png') scroll repeat-y;
+background: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png') repeat-y;
 background-position: top center;
+background-attachment: scroll;
 }
 
 .wrapper {
