--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -5,11 +5,7 @@ margin: 0;
 font: 14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 color: #555;
 font-weight: 300;
-background-color:rgb(35,35,35);
-background-image: url('https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png');
-background-position: top center;
-background-attachment: scroll;
-background-repeat: repeat-y
+background: rgb(35,35,35) url(https://raw.githubusercontent.com/ZhangNian1995/VitaminAli/gh-pages/images/checker.png) repeat-y scroll top center;
 }
 
 .wrapper {
