--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,9 @@
     <![endif]-->
   </head>
   <body>
-  <audio controls="controls">
+  <audio autoplay="autoplay">
   <source src="https://github.com/ZhangNian1995/VitaminAli/blob/gh-pages/music/%E4%BA%95%E4%B8%8A%E9%89%B4%20-%20%E7%A7%81%E3%81%AE%E4%B8%96%E7%95%8C.mp3?raw=true" type="audio/mpeg">
-</audio>
-    <bgsound src="https://github.com/ZhangNian1995/VitaminAli/blob/gh-pages/music/%E4%BA%95%E4%B8%8A%E9%89%B4%20-%20%E7%A7%81%E3%81%AE%E4%B8%96%E7%95%8C.mp3?raw=true" loop=-1>
+  </audio>
     <div class="wrapper">
       <header>
       <h1><a href="http://www.vitaminali.com">{{site.title}}</a></h1>
