--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
         <ul>
           <li><a href="https://github.com/{{site.username}}/VitaminAli/tree/gh-pages">View On <strong>GitHub</strong></a></li>
         </ul>
+        <a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=tM7c1drT2t3V2tPT9MXFmtfb2Q" style="text-decoration:none;"><img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_02.png"/></a>
       </header>
       <section>
         <h1>
