--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
       </section>
     </div>
     <footer>
-      <p>Project maintained by <a href="https://github.com/{{site.username}}">Vitamin°</a>&#9;<a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=tM7c1drT2t3V2tPT9MXFmtfb2Q" style="text-decoration:none;"><img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_02.png"/></a></p>
+      <p>Project maintained by <a href="https://github.com/{{site.username}}">Vitamin°</a>&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=tM7c1drT2t3V2tPT9MXFmtfb2Q" style="text-decoration:none;"><img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_02.png"/></a></p>
       <p><script type="text/javascript">
       var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
       document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F913d3368daf90b2c79f8569a9ffa5e00' type='text/javascript'%3E%3C/script%3E"));
