--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{{site.title}}</title>
+    <keywords>{{site.keywords}}</keywords>
+    <description>{{site.description}}</description>
     <link rel="stylesheet" href="{{site.baseurl}}/stylesheets/styles.css">
     <link rel="stylesheet" href="{{site.baseurl}}/stylesheets/pygment_trac.css">
     <script src="{{site.baseurl}}/javascripts/scale.fix.js"></script>
