--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{{site.title}}</title>
-    <keywords>{{site.keywords}}</keywords>
-    <description>{{site.description}}</description>
+    <meta name="keywords" content="Vitamin°的Github博客,Java,JavaEE,JavaScript,HTML,Android开发,Linux,服务器,智能手机,HTML5" />
+    <meta name="description" content="Vitamin°的Github博客,我是一名Android开发工程师,这里是记录博主学习和成长的一个自媒体博客。关注于Android开发和Web前端的学习研究，有这方面感兴趣的朋友欢迎一起交流学习。" />
     <link rel="stylesheet" href="{{site.baseurl}}/stylesheets/styles.css">
     <link rel="stylesheet" href="{{site.baseurl}}/stylesheets/pygment_trac.css">
     <script src="{{site.baseurl}}/javascripts/scale.fix.js"></script>
