--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   </head>
   <body>
   <audio autoplay="autoplay" loop="loop" >
-  <source src="https://github.com/ZhangNian1995/VitaminAli/blob/gh-pages/music/%E4%BA%95%E4%B8%8A%E9%89%B4%20-%20%E7%A7%81%E3%81%AE%E4%B8%96%E7%95%8C.mp3?raw=true" type="audio/mpeg">
+  <source src="" type="audio/mpeg">
   </audio>
     <div class="wrapper">
       <header>
