--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,22 @@
       document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F913d3368daf90b2c79f8569a9ffa5e00' type='text/javascript'%3E%3C/script%3E"));
     </script>&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=tM7c1drT2t3V2tPT9MXFmtfb2Q" style="text-decoration:none;"><img src="http://rescdn.qqmail.com/zh_CN/htmledition/images/function/qm_open/ico_mailme_02.png"/></a></p>
     </footer>
+    <!-- 多说评论框 start -->
+	<div class="ds-thread" data-thread-key="请将此处替换成文章在你的站点中的ID" data-title="请替换成文章的标题" data-url="请替换成文章的网址"></div>
+<!-- 多说评论框 end -->
+<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"vitaminali"};
+	(function() {
+		var ds = document.createElement('script');
+		ds.type = 'text/javascript';ds.async = true;
+		ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+		ds.charset = 'UTF-8';
+		(document.getElementsByTagName('head')[0] 
+		 || document.getElementsByTagName('body')[0]).appendChild(ds);
+	})();
+	</script>
+<!-- 多说公共JS代码 end -->
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
   </body>
 </html>
