--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 {{ content }}
       </section>
     </div>
-        <div>
+        <div class="wrapper" >
           <!-- 多说评论框 start -->
 	<div class="ds-thread" data-thread-key="{{ page.title }}" data-title="{{ page.title }}" data-url="http://www.vitaminali.com{{ page.url }}"></div>
 <!-- 多说评论框 end -->
