--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -26,6 +26,24 @@ background: RGB(35,35,35) url(https://raw.githubusercontent.com/ZhangNian1995/Vi
   box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 1px, rgba(0, 0, 0, 0.45) 0 3px 10px;
 }
 
+.Comment {
+  width: 1000px;
+  margin: 0 auto;
+  background: #DEDEDE;
+  filter:alpha(opacity=90);   
+      -moz-opacity:0.9;   
+      -khtml-opacity: 0.9;   
+      opacity: 0.9;   
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  border-radius: 8px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 1px, rgba(0, 0, 0, 0.45) 0 3px 10px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 1px, rgba(0, 0, 0, 0.45) 0 3px 10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 1px, rgba(0, 0, 0, 0.45) 0 3px 10px;
+}
+
 header, section, footer {
   display: block;
 }
