--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,18 @@ var duoshuoQuery = {short_name:"vitaminali"};
 		 || document.getElementsByTagName('body')[0]).appendChild(ds);
 	})();
 	</script>
+	<div class="ds-share flat" 
+	data-thread-key="{{ page.title }}" 
+	data-title="{{ page.title }}" 
+	data-images="http://www.vitaminali.com{{ page.url }}" 
+	data-content="{{ content }}" 
+	data-url="http://www.vitaminali.com{{ page.url }}">
+    <div class="ds-share-aside-right">
+      <div class="ds-share-aside-inner">
+      </div>
+      <div class="ds-share-aside-toggle">分享到</div>
+    </div>
+</div>
 <!-- 多说公共JS代码 end -->
 	</div>
     <footer>
