--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@ var duoshuoQuery = {short_name:"vitaminali"};
 	<div class="ds-share flat" 
 	data-thread-key="{{ page.title }}" 
 	data-title="{{ page.title }}" 
-	data-images="http://www.vitaminali.com{{ page.url }}" 
+	data-images="https://avatars1.githubusercontent.com/u/8126169?v=3&s=460" 
 	data-content="{{ content }}" 
 	data-url="http://www.vitaminali.com{{ page.url }}">
     <div class="ds-share-aside-right">
