--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,18 +13,6 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <div class="ds-share flat" 
-	data-thread-key="{{ page.title }}" 
-	data-title="{{ page.title }}" 
-	data-images="https://avatars1.githubusercontent.com/u/8126169?v=3&s=460" 
-	data-content="{{ content }}" 
-	data-url="http://www.vitaminali.com{{ page.url }}">
-    <div class="ds-share-aside-right">
-      <div class="ds-share-aside-inner">
-      </div>
-      <div class="ds-share-aside-toggle">分享到</div>
-      </div>
-    </div>
   </head>
   <body>
   <audio autoplay="autoplay" loop="loop" >
@@ -46,13 +34,16 @@
 {{ content }}
       </section>
     </div>
-        <div class="Comment" >
-          <!-- 多说评论框 start -->
+    <script type="text/javascript">
+    var string = "文章目录";
+    if({{ page.title }} != string){
+    <div class="Comment" >
+        <!-- 多说评论框 start -->
 	<div class="ds-thread" data-thread-key="{{ page.title }}" data-title="{{ page.title }}" data-url="http://www.vitaminali.com{{ page.url }}"></div>
-<!-- 多说评论框 end -->
-<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
-var duoshuoQuery = {short_name:"vitaminali"};
+	<!-- 多说评论框 end -->
+	<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+	<script type="text/javascript">
+	var duoshuoQuery = {short_name:"vitaminali"};
 	(function() {
 		var ds = document.createElement('script');
 		ds.type = 'text/javascript';ds.async = true;
@@ -62,8 +53,22 @@ var duoshuoQuery = {short_name:"vitaminali"};
 		 || document.getElementsByTagName('body')[0]).appendChild(ds);
 	})();
 	</script>
+	<!-- 多说分享代码 -->
+	<div class="ds-share flat" 
+	data-thread-key="{{ page.title }}" 
+	data-title="{{ page.title }}" 
+	data-images="https://avatars1.githubusercontent.com/u/8126169?v=3&s=460" 
+	data-content="{{ content }}" 
+	data-url="http://www.vitaminali.com{{ page.url }}">
+    	<div class="ds-share-aside-right">
+      	<div class="ds-share-aside-inner">
+      	</div>
+      	<div class="ds-share-aside-toggle">分享到</div>
+      	</div>
+    	</div>
 <!-- 多说公共JS代码 end -->
-	</div>
+	</div>};
+	</script>
     <footer>
       <p>Project maintained by <a href="https://github.com/{{site.username}}">Vitamin°</a></p>
       <p><script type="text/javascript">
