--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,8 +67,8 @@
       	</div>
     	</div>
 <!-- 多说公共JS代码 end -->
-	</div>};
-	</script>
+	</div>
+	</script>};
     <footer>
       <p>Project maintained by <a href="https://github.com/{{site.username}}">Vitamin°</a></p>
       <p><script type="text/javascript">
