--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,8 @@
     </div>
     <script type="text/javascript">
     var string = "文章目录";
-    if({{ page.title }} != string){
+    if({{ page.title }} == string){
+    }else{
     <div class="Comment" >
         <!-- 多说评论框 start -->
 	<div class="ds-thread" data-thread-key="{{ page.title }}" data-title="{{ page.title }}" data-url="http://www.vitaminali.com{{ page.url }}"></div>
@@ -67,8 +68,8 @@
       	</div>
     	</div>
 <!-- 多说公共JS代码 end -->
-	</div>
-	</script>};
+	</div>};
+	</script>
     <footer>
       <p>Project maintained by <a href="https://github.com/{{site.username}}">Vitamin°</a></p>
       <p><script type="text/javascript">
