--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
       	</div>
     	</div>
 <!-- 多说公共JS代码 end -->
-	</div>};
+	</div>}
 	</script>
     <footer>
       <p>Project maintained by <a href="https://github.com/{{site.username}}">Vitamin°</a></p>
