--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,7 @@
       </section>
     </div>
     <script type="text/javascript">
-    var string = "文章目录";
-    if({{ page.title }} == string){
+    if({{ page.title }} == "文章目录"){
     }else{
     <div class="Comment" >
         <!-- 多说评论框 start -->
