--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       </section>
     </div>
     <script type="text/javascript">
-    if({{ page.title }} == "文章目录"){
+    if({{ page.title }} == 文章目录){
     }else{
     <div class="Comment" >
         <!-- 多说评论框 start -->
