--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       </section>
     </div>
     <script type="text/javascript">
-    var str = "文章目录";
+    var str = 文章目录;
     var title = {{ page.title }};
     if(str.localeCompare(title) == 0){
     }else{
