--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,8 @@
       </section>
     </div>
     <script type="text/javascript">
-    var str = 文章目录;
-    var title = {{ page.title }};
+    var str = "文章目录";
+    var title = "{{ page.title }}";
     if(str.localeCompare(title) == 0){
     }else{
     <div class="Comment" >
