--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,8 @@
     <script type="text/javascript">
     var str = "文章目录";
     var title = "{{ page.title }}";
-    if(str.localeCompare(title) == 0){
+    var var = str.localeCompare(title);
+    if( var == 0 ){
     }else{
     <div class="Comment" >
         <!-- 多说评论框 start -->
