--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,10 +35,10 @@
       </section>
     </div>
     <script type="text/javascript">
-    var str = "文章目录";
     var title = "{{ page.title }}";
-    var var = str.localeCompare(title);
-    if( var == 0 ){
+    var str = title.localeCompare("文章目录");
+    if( str == 0 ){
+    	alert(str);
     }else{
     <div class="Comment" >
         <!-- 多说评论框 start -->
