--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
     if( str == 0 ){
     	alert(str);
     }else{
+    	alert(str);
     <div class="Comment" >
         <!-- 多说评论框 start -->
 	<div class="ds-thread" data-thread-key="{{ page.title }}" data-title="{{ page.title }}" data-url="http://www.vitaminali.com{{ page.url }}"></div>
