--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,13 +35,8 @@
       </section>
     </div>
     <script type="text/javascript">
-    (function() {
-    var title = "{{ page.title }}";
-    var str = title.localeCompare("文章目录");
-    if( str == 0 ){
-    	alert(str);
+    if(1==2){
     }else{
-    	alert(str);
     <div class="Comment" >
         <!-- 多说评论框 start -->
 	<div class="ds-thread" data-thread-key="{{ page.title }}" data-title="{{ page.title }}" data-url="http://www.vitaminali.com{{ page.url }}"></div>
@@ -58,6 +53,9 @@
 		 || document.getElementsByTagName('body')[0]).appendChild(ds);
 	})();
 	</script>
+<!-- 多说公共JS代码 end -->
+	</div>
+	</script>
 	<!-- 多说分享代码 -->
 	<div class="ds-share flat" 
 	data-thread-key="{{ page.title }}" 
@@ -71,10 +69,8 @@
       	<div class="ds-share-aside-toggle">分享到</div>
       	</div>
     	</div>
-<!-- 多说公共JS代码 end -->
-	</div>}
-	})();
-	</script>
+    	}
+    	</script>
     <footer>
       <p>Project maintained by <a href="https://github.com/{{site.username}}">Vitamin°</a></p>
       <p><script type="text/javascript">
