--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
 	data-thread-key="{{ page.title }}" 
 	data-title="{{ page.title }}" 
 	data-images="https://avatars1.githubusercontent.com/u/8126169?v=3&s=460" 
-	data-content="{{ content }}" 
+	data-content="{{ page.content }}" 
 	data-url="http://www.vitaminali.com{{ page.url }}">
     	<div class="ds-share-aside-right">
       	<div class="ds-share-aside-inner">
