--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,7 @@
     	</div>
     <footer>
       <p>Project maintained by <a href="https://github.com/{{site.username}}">Vitamin°</a></p>
+      <a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=0328a23ceba55479e30340451589711c4fbeceae47f3058832dd3c0d7cbe35a7"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="申城开发者交流群" title="申城开发者交流群"></a>
       <p><script type="text/javascript">
       var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
       document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F913d3368daf90b2c79f8569a9ffa5e00' type='text/javascript'%3E%3C/script%3E"));
