--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
   </audio>
     <div class="wrapper">
       <header>
-      <h1><a href="http://blog.vitaminali.com">{{site.title}}</a></h1>
+      <h1><a href="http://git.vitaminali.com">{{site.title}}</a></h1>
         <p>To care for each other, not war!</p>
         <p class="view"><a href="https://github.com/{{site.username}}/VitaminAli">View the Project on GitHub <small>{{site.username}}/VitaminAli</small></a></p>
         <ul>
@@ -36,7 +36,7 @@
     </div>
     <div class="Comment" >
         <!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key="{{ page.title }}" data-title="{{ page.title }}" data-url="http://blog.vitaminali.com{{ page.url }}"></div>
+	<div class="ds-thread" data-thread-key="{{ page.title }}" data-title="{{ page.title }}" data-url="http://git.vitaminali.com{{ page.url }}"></div>
 	<!-- 多说评论框 end -->
 	<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 	<script type="text/javascript">
@@ -59,7 +59,7 @@
 	data-title="{{ page.title }}" 
 	data-images="https://avatars1.githubusercontent.com/u/8126169?v=3&s=460" 
 	data-content={{ page.title }}"
-	data-url="http://blog.vitaminali.com{{ page.url }}">
+	data-url="http://git.vitaminali.com{{ page.url }}">
     	<div class="ds-share-aside-right">
       	<div class="ds-share-aside-inner">
       	</div>
